--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     		<div class="full-width">
     			<div class="half-width">
     				<h1>Tatianna Piercy</h1>
-    				<h2><span>Hi,</span> I'm a developer that loves clean &amp; elegant code.</h2>
+    				<h2><span>Hi,</span> I'm a developer and ux designer that loves clean &amp; elegant code with design that has a purpose.</h2>
     			</div>
     			<div class="half-width"
     			>
