--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     			<div class="full-width">
     				<h2>A little about me.</h2>
     				<div class="half-width">
-    					<p>I've made my home base in Los Angeles, CA, with my small growing family. My journey into tech started with me wanting to start a travel blog. As I started my writing online, I was fascinated with how easily I could get my voice out there. I hooked and wanted to learn how to build my own site to fit my own specific needs.</p>
+    					<p>I've made my home base in Los Angeles, CA, with my small growing family. My journey into tech started with me wanting to start a travel blog. As I started my writing online, I was fascinated with how easily I could get my voice out there. I was hooked and wanted to learn how to build my own site to fit my own specific needs.</p>
     				</div>
     				<div class="half-width">
     					<p>That curiosity then opened a door that could never be shut. When I learned how to build my first website, I realized I found something that gave me the freedom &amp; versatility I was looking for in my work. Now I've made a full switch to front-end development, where I can use my organization skills and eye for detail to write clean, elegant code.</p>
@@ -56,7 +56,7 @@
     				<div class="third-width">
     					<img src="img/pencil-icon.png" alt="PSD icon"/>
     					<h3>Ease Converting Designs into Code</h3>
-    					<p>You can trust me to take a designer's PSD and quickly &amp; accurately convert it into a webpage that is pixel-perfect match.</p> 
+    					<p>You can trust me to take a designer's PSD or Sketch file and quickly &amp; accurately convert it into a webpage that is pixel-perfect match.</p> 
     				</div>
     			</div>
     		</section>
