--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     		<div class="full-width">
     			<div class="half-width">
     				<h1>Tatianna Piercy</h1>
-    				<h2><span>Hi,</span>  I am an UX Designer that loves clean &amp; elegant design that has a purpose.</h2>
+    				<h2><span>Hi,</span>  I am a fierce UX Designer that loves clean &amp; elegant design that has a purpose.</h2>
     			</div>
     			<div class="half-width"
     			>
