css and layout changed
responsive

--- a/linus.html
+++ b/linus.html
@@ -3,10 +3,28 @@
 <head>
 	<title>Linus Bike Store</title>
 	<meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Volkhov" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <main>
+	<header>
+    	<div class="container-1">
+    		<div class="logo">
+    			<h1>Tatianna Piercy</h1>
+    		</div>
+    		<div class="content nav">
+    			<nav>
+    				<ul>
+    					<li><a href="#about">ABOUT</a>
+    					</li>
+    					<li><a href="#work">WORK</a></li>
+    					<li><a href="#contact">CONTACT</a></li>
+    				</ul>
+    			</nav>
+    		</div>
+    		</div>
+    	</header>
 	<div class="container-1">
 			<div class="sidebar">
 				<h3>LINUS BIKES</h3>
@@ -186,7 +204,7 @@
 			<div>
 				<h4>USER FLOW</h4>
 					<p>
-						But, before we headed to the wihiteboard, we wanted to comb through the user flow to ensure our users had not only a pleasant experience, but a seamless, functional one.
+						But, before we headed to the whiteboard, we wanted to comb through the user flow to ensure our users had not only a pleasant experience, but a seamless, functional one.
 						<br>
 						<br>
 						Below you can see what the current flow is:
@@ -296,7 +314,7 @@
 			<div>
 				insert image here
 				<div>
-					<button type="button" class="btn btn-outline-secondary btn-lg">VIEW MAP</button>
+					<button type="button" class="btn btn-outline-secondary btn-lg">VIEW PROTOTYPE</button>
 				</div>
 			</div>		
 		</div>
@@ -329,12 +347,12 @@
 	<div class="container-1">
 		<div class="footer">
 			<ul>
-				<li>HOME</li>
-				<li>P5 PROJECT</li>
-				<li>LINUS BIKES</li>
-				<li>LEGIT BUD STORE</li>
-				<li>ABOUT</li>
-				<li>CONTACT</li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="index.html">P5 PROJECT</a></li>
+				<li><a href="linus.html">LINUS BIKES</a></li>
+				<li><a href="legit-bud.html">LEGIT BUD STORE</a></li>
+				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
 		</div>
 	</div>
