hero image and logo added
main.css and hero.css updated

--- a/index.html
+++ b/index.html
@@ -1,85 +1,78 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Tatianna Piercy &verbar; Developer</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-eqiuv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+        <link rel="stylesheet" href="css/hero.css">
+        <title>Tatianna Piercy &verbar; Designer/Developer</title>
     </head>
     <body>
-    	<header>
-    		<div class="full-width">
-    			<div class="half-width">
-    				<h1>Tatianna Piercy</h1>
-    				<h2><span>Hi,</span>  I am a fierce UX Designer that loves clean &amp; elegant design that has a purpose.</h2>
-    			</div>
-    			<div class="half-width"
-    			>
-    			
-    				<nav>
-    					<ul>
-    						<li><a href="#about">About</a>
-    						</li>
-    						<li><a href="#work">Work</a></li>
-    						<li><a href="#contact">Contact</a></li>
-    					</ul>
-    				</nav>
-    			</div>
-    		</div>
-    	</header>
-    	<main>
-    		<section id="about">
-    			<div class="full-width">
-    				<h2>A little about me.</h2>
-    				<div class="half-width">
-    					<p>I've made my home base in Los Angeles, CA, with my small growing family. My journey into tech started with me wanting to start a travel blog. As I started my writing online, I was fascinated with how easily I could get my voice out there. I was hooked and wanted to learn how to build my own site to fit my own specific needs.</p>
-    				</div>
-    				<div class="half-width">
-    					<p>That curiosity then opened a door that could never be shut. When I learned how to build my first website, I realized I found something that gave me the freedom &amp; versatility I was looking for in my work. Now I've made a full switch to front-end development, where I can use my organization skills and eye for detail to write clean, elegant code.</p>
-    				</div>
-    			</div>
-    		</section>
-    		<section id="work">
-    			<div class="full-width">
-    				<div class="third-width">
-    					<img src="img/html-icon.png" alt="HTML icon"/>
-    					<h3>Hand-Coded HTML</h3>
-    					<p>My Focus is writing clean, well-formatted, semantic HTML5 by hand to make sure that the content is easy to read, easy to collaborate, trouble-shoot and accessible.</p>
-    				</div>
-    				<div class="third-width">
-    					<img src="img/css-icon.png" alt="CSS icon"/>
-    					<h3>Well Organized CSS</h3>
-    					<p>I pride myself on writing CSS that is easy to read and build on. I focus on keeping my CSS lean and fast to load, and I make it a habit to stay up to date on current best practices.</p>
-    				</div>
-    				<div class="third-width">
-    					<img src="img/pencil-icon.png" alt="PSD icon"/>
-    					<h3>Ease Converting Designs into Code</h3>
-    					<p>You can trust me to take a designer's PSD or Sketch file and quickly &amp; accurately convert it into a webpage that is pixel-perfect match.</p> 
-    				</div>
-    			</div>
-    		</section>
-    		<footer id="contact">
-    			<div class="full-width">
-    				<div class="half-width">
-    					<img src="img/contact-image.png" alt="Contact Image" id="contact-img"/>
-    				</div>
-    				<div class="half-width" id="contact-info">
-    					<h2>Like what you see?</h2>
-    					<h3 id="email-header">Let's meet for a cup of coffee.</h3>
-    					<a href="mailto:tpiercy@gmail.com"><img src="img/envelope.png" id="envelope" alt="Mail icon"/>hi [@] tatiannapiercy.com</a>
-    					<br>
-    					<br>
-    					<h3 id="socialmedia-header"><strong>Or, find me on the interwebs</strong></h3>
-    					<ul>
-    						<li><a href="http://twitter.com" target="_BLANK"><img src="img/twitter.png" alt="Twitter icon"/></a></li>
-    						<li><a href="http://tumblr.com" target="_BLANK"><img src="img/tumblr.png" alt="Tumblr icon"/></a></li>
-    						<li><a href="http://instagram.com" target="_BLANK"><img src="img/instagram.png" alt="Instagram icon"/></a></li>
-    						<li><a href="http://linkedin.com" target="_BLANK"><img src="img/linkedin.png" alt="Linkdin icon"/></a></li>
-    						<li><a href="http://github.com" target="_BLANK"><img src="img/github.png" alt="Github icon"/></a></li>
-						</ul>
-    				</div>
-    			</div>
-    		</footer>
-    	</main>
+    	<div class="pimg1">
+                <nav>
+                    <img src="images/taty-red-sig@3x.png" width="200" height="80">
+                    <ul>
+                        <li><a href="#about">ABOUT</a>
+                        </li>
+                        <li><a href="#work">WORK</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <section class="section section-light" id="work">
+            <h2>Linus Bikes</h2>
+            <p>Developed a mobile app with a foundation of user-centered design in order to overcome the challenge of community involvement and forward thinking technology for the Linus Bike Company.</p>
+        </section>
+
+         <div class="pimg2">
+            <div class="ptext"><a href="linus.html">
+                <span class="border">
+                    Linus Bikes
+                </span></a>
+            </div>
+        </div>
+
+        <section class="section section-dark">
+            <h2>Legit Bud Store</h2>
+            <p>A website redesign for a cannabis delivery company that would allow them to reach a broader customer base with simpler and more appealing solutions.</p>
+        </section>
+
+        <div class="pimg3">
+            <div class="ptext"><a href="legit-bud.html">
+                <span class="border">
+                    Legit Bud Store
+                </span></a>
+            </div>
+        </div>
+
+        <section class="section section-dark">
+            <h2>Adding to the Collection</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+        </section>
+
+        <div class="pimg4">
+            <div class="ptext"><a href="coming-soon.html">
+                <span class="border">
+                    Coming Soon
+                </span></a>
+            </div>
+        </div>
+
+        <section id="about">
+            <div class="pimg5">
+                <div class="ptext">
+                </div>
+            </div>
+        </section>
+
+
     </body>
 </html>
  
