--- a/legit-bud.html
+++ b/legit-bud.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Legit Bud Store</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-eqiuv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet"><link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Legit Bud Store</title>
 </head>
 <body>
-	<div class="container-1">
-		<div class="title">
-    		<img src="images/legitbudstore-logo-revised.png" alt="LBS-logo" class="responsive">
-    	</div>
-    	<div class="title-2">
-    		<nav>
-    			<ul>
-    				<li><a href="#about">ABOUT</a></li>
-    				<li><a href="#work">WORK</a></li>
-    				<li><a href="#contact">CONTACT</a></li>
-    			</ul>
-    		</nav>
-    	</div>
-    </div>
-		<header>		
-    	</header>
+	<header>
+	<nav>
+        <img src="images/legitbudstore-logo-revised.png" width="200" height="40">
+            <ul>
+            	<li><a href="#about">ABOUT</a>
+               	</li>
+                <li><a href="#work">WORK</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </u>
+    </nav>		
+    </header>
     <main>
     	<div class="container-2">
     		<div class="content intro">
@@ -60,14 +58,15 @@
     		</div>
     		<div class="challenge-3">
     			<div class="support">
+    				<figure><img src="images/lbs-original-images@3x.png" alt="Infograph" class="responsive" height="400" width="500"><figcaption>Legit Original Website</figcaption></figure>
     			</div>
     			<div class="challenge-info">
     				<p>
     				The importance of reaching the average consumer and not just 8% was the reason why I took on the Legit Bud Store website challenge, The consensus of the challenge was to redesign their website with the following in mind:
     					<ul class="bullet">
-    						<li>The navigation has to be clear and concise to alleviate the rabbit hole of categories</li><br>
-    						<li>Users must be able to go through the checkout and delivery process seamlessly without having to learn new methods of payment</li><br>
-    						<li>It has to be unique, yet feel familiar to the user in ways of comfort and affordability</li> 
+    						<li>The navigation has to be <strong>clear and concise</strong> to alleviate the rabbit hole of categories</li><br>
+    						<li>Users must be able to go through the checkout and delivery process <strong>seamlessly</strong> without having to learn new methods of payment</li><br>
+    						<li>It has to be <strong>unique, yet feel familiar</strong> to the user in ways of comfort and affordability</li> 
     					</ul>
     				</p>
     			</div>
@@ -98,6 +97,9 @@
     			</p>
     			</div>
     		</div>
+    		<br>
+    		<br>
+    		<br>
     		<div class="pain-point-2">
     			<div class="support">
     				<img src="images/lbs-checkout-research.jpg" alt="Infograph" class="responsive">
@@ -110,14 +112,15 @@
     		</div>
     		<div class="pain-point-3">
     			<div class="support">
+    				<figure><img src="images/user-interview-quotes@3x.png" alt="Infograph" class="responsive" height="400" width="500"><figcaption>User Interview Quotes</figcaption></figure>
     			</div>
     			<div class="pp3">
     				<p>
     					So these are the pain points I have to solve:
     					<ul class="bullet">
-    						<li>How to make a more appealing and inviting navigation throughout the site.</li><br>
-    						<li>How to incorporate a more effective and pleasant checkout flow.</li><br>
-    						<li>How to accommodate the average buyer to increase sales and traffic to the site while gaining loyalty.</li>
+    						<li>How to make a <strong>more appealing and inviting navigation</strong> throughout the site.</li><br>
+    						<li>How to incorporate a more effective and <strong>pleasant checkout flow</strong>.</li><br>
+    						<li>How to accommodate the average buyer to increase sales and traffic to the site while <strong>gaining loyalty.</strong></li>
     					</ul>
     				</p>
     			</div>
@@ -190,7 +193,7 @@
 						<li><a href="index.html">P5 PROJECT</a></li>
 						<li><a href="linus.html">LINUS BIKES</a></li>
 						<li><a href="legit-bud.html">LEGIT BUD STORE</a></li>
-						<li><a href="about.html">ABOUT</a></li>
+						<li><a href="#about">ABOUT</a></li>
 						<li><a href="contact.html">CONTACT</a></li>
 					</ul>
 				</div>
