--- a/linus.html
+++ b/linus.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Linus Bike Store</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-eqiuv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Volkhov" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <title>Linus Bike Store</title>
 </head>
 <body>
 <main>
@@ -351,7 +353,7 @@
 				<li><a href="index.html">P5 PROJECT</a></li>
 				<li><a href="linus.html">LINUS BIKES</a></li>
 				<li><a href="legit-bud.html">LEGIT BUD STORE</a></li>
-				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="#about">ABOUT</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 			</ul>
 		</div>
