linus page added
about me complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
     	<div class="pimg1">
                 <nav>
-                    <img src="images/taty-red-sig@3x.png" width="200" height="80">UX Designer | Developer
+                    <img src="images/taty-red-sig@3x.png" width="200" height="80"><strong>UX Designer | Developer</strong>
                     <ul>
                         <li><a href="#about">ABOUT</a>
                         </li>
@@ -44,7 +44,7 @@
         <div class="pimg3">
             <div class="ptext"><a href="legit-bud.html">
                 <span class="border">
-                    Legit Bud Store
+                    Legit Bud
                 </span></a>
             </div>
         </div>
@@ -67,12 +67,29 @@
 
         <section id="about">
             <div class="pimg5">
-                <div class="ptext">
+                <div class="content">
+                    <div class="buffer">
+
+                    </div>
+
+                    <div class="about-text">
+                        <h2><span class="alert-text">.Plain and Simple</span></h2>
+                            <p>
+                                I want to <span class="alert-text"><strong>create things that MATTER</strong></span>. From Law Enforcement Officer to Sales Manager to now Designer, I have learned that my passion is <span class="alert-text"><strong>PEOPLE</strong></span>. Understanding and really listening to what works for them wakes me up each morning with a smile on my face. Although I've fallen flat on my face from time to time, I pride myself in <span class="alert-text"><strong>being WRONG</strong></span> and working through the night just to get it right. Even then, the results may be inconclusive, lol. They were just gifts of improvement telling me to look harder/dig deeper. I strive to be better with each failed attempt and my addiction to learning pushes the meter for me.
+                                <br>
+                                <br>
+                                .... or it could be my addiction to pizza.... who knows
+                                <br>
+                                <br>
+                                All in all, if Pinky and The Brain thought they could take over/change the world, I don't see why I can't try.
+                                <br>
+                                <br>
+                                .... oh yeah, I can code too. This portfolio has been coded using <span class="alert-text"><strong>HTML, CSS and Javascript by myself</strong></span>.
+                            </p>
+                    </div>
                 </div>
             </div>
         </section>
-
-
     </body>
 </html>
  
