--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <li><a href="#about">ABOUT</a>
                         </li>
                         <li><a href="#work">WORK</a></li>
-                        <li><a href="#contact">CONTACT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
