--- a/legit-bud.html
+++ b/legit-bud.html
@@ -17,8 +17,8 @@
             	<li><a href="index.html#about"><span>ABOUT</span></a>
                	</li>
                 <li><a href="index.html#work">WORK</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </u>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
     </nav>		
     </header>
     <main>
@@ -187,7 +187,6 @@
     				<em>Thank You For Reading!!</em>
     			</p>
     		</div>
-                <div class="container">
 				<div class="navbar" id="myNavbar">
 						<a href="index.html">HOME</a>
 						<a href="index.html">P5 PROJECT</a>
@@ -195,11 +194,10 @@
 						<a href="legit-bud.html">LEGIT BUD STORE</a>
 						<a href="index.html#about">ABOUT</a>
 						<a href="contact.html">CONTACT</a>
-                        <a href="contact.html">ARTIFACTS</a>
+                        <a href="artifacts.html">ARTIFACTS</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
-                </div>
-			</div>
+			
     </main>
 
 </body>
