--- a/linus.html
+++ b/linus.html
@@ -12,13 +12,13 @@
 <body>
 	<div class="linus">
 	<nav>
-        <img src="images/linus-bike-logo.png" width="100" height="100">
+        <img src="images/linus-bike-logo.png" alt="Linus Bikes Logo" width="100" height="100">
             <ul>
             	<li><a href="index.html#about">ABOUT</a>
                	</li>
                 <li><a href="index.html#work">WORK</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </u>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul><
     </nav>		
     </div>
     <main>
@@ -51,7 +51,7 @@
     			</div>
     			<div class="support">
     				<img src="images/linus-ecommerce-stats.png" alt="Infograph" class="responsive">
-    			</div>
+                </div>
     		</div>
     		<div class="challenge-2">
     			<div>
@@ -196,7 +196,6 @@
     				<em>Thank You For Reading!!</em>
     			</p>
     		</div>
-                <div class="container">
 				<div class="navbar" id="myNavbar">
 						<a href="index.html">HOME</a>
 						<a href="index.html">P5 PROJECT</a>
@@ -204,16 +203,12 @@
 						<a href="legit-bud.html">LEGIT BUD STORE</a>
 						<a href="index.html#about">ABOUT</a>
 						<a href="contact.html">CONTACT</a>
-                        <a href="contact.html">ARTIFACTS</a>
+                        <a href="artifacts.html">ARTIFACTS</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
-                </div>
 			</div>
     </main>
-
-</body>
-
-    <script>
+<script>
     function myFunction() {
     var x = document.getElementById("myNavbar");
     if (x.className === "navbar") {
@@ -222,6 +217,7 @@
     x.className = "navbar";
     }
 }
-    </script>
 
+</script>
+</body>
 </html>
