removed contact page
added iconography... changed footer.... updated landing page image..... added vimeo for linus

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
         <link rel="stylesheet" href="css/hero.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Tatianna Piercy &verbar; Designer/Developer</title>
     </head>
     <body>
@@ -17,15 +18,15 @@
                         <li><a href="#about">ABOUT</a>
                         </li>
                         <li><a href="#work">WORK</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
 
         <section class="section section-light" id="work">
-            <h2>Linus Bikes</h2>
-            <p>Developed a mobile app with a foundation of user-centered design in order to overcome the challenge of community involvement and forward thinking technology for the Linus Bike Company.</p>
+            <h2>Projects</h2>
+            <p>From website redesign to native app development, the soul focus is the user. "How might we make this better?"
+            </p>
         </section>
 
          <div class="pimg2">
@@ -37,8 +38,9 @@
         </div>
 
         <section class="section section-dark">
-            <h2>Legit Bud Store</h2>
-            <p>A website redesign for a cannabis delivery company that would allow them to reach a broader customer base with simpler and more appealing solutions.</p>
+            <p>
+                <em>“Good design is like a refrigerator—when it works, no one notices, but when it doesn’t, it sure stinks.”</em> –Irene Au
+            </p>
         </section>
 
         <div class="pimg3">
@@ -85,11 +87,37 @@
                                 <br>
                                 <br>
                                 .... oh yeah, I can code too. This portfolio has been coded using <span class="alert-text"><strong>HTML, CSS and Javascript by myself</strong></span>.
+                                <br>
+                                <br>
+                                Let's <span class="alert-text"><strong>chat</strong></span>. I'm sure we can come up with some ways to change the world <span class="alert-text"><strong>together</strong></span>.
                             </p>
+
+                            <a href="https://www.linkedin.com/in/tatiannapiercy/"><i class="fa fa-linkedin fa-2x"></i></a>
+                            <a href="mailto:tatianna.piercy@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
                     </div>
                 </div>
             </div>
         </section>
+        <div class="navbar" id="myNavbar">
+                        <a href="index.html">HOME</a>
+                        <a href="index.html">P5 PROJECT</a>
+                        <a href="linus.html">LINUS BIKES</a>
+                        <a href="legit-bud.html">LEGIT BUD STORE</a>
+                        <a href="index.html#about">ABOUT</a>
+                        <a href="artifacts.html">ARTIFACTS</a>
+                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        </div>
+        <script>
+    function myFunction() {
+    var x = document.getElementById("myNavbar");
+    if (x.className === "navbar") {
+    x.className += " responsive";
+    } else {
+    x.className = "navbar";
+    }
+}
+
+</script>
     </body>
 </html>
  
