--- a/legit-bud.html
+++ b/legit-bud.html
@@ -14,10 +14,9 @@
 	<nav>
         <img src="images/legitbudstore-logo-revised.png" width="200" height="40">
             <ul>
-            	<li><a href="index.html#about"><span>ABOUT</span></a>
+            	<li><a href="index.html#about">ABOUT</a>
                	</li>
                 <li><a href="index.html#work">WORK</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
             </ul>
     </nav>		
     </header>
@@ -181,6 +180,8 @@
     		<div class="content takeaway">
     			<h3>TAKEAWAYS</h3>
     			<p>
+                    <strong><em>** To see more of the research and design process, please click on the ARTIFACTS link below **</em></strong>
+                    <br>
     				This project allowed me to understand how important something that is as simple as the navigation placement can affect how people interact with your product. Also, knowing your market/target user plays the biggest part in your success as a company. I believe that as the industries evolve, so should we.
     				<br>
     				<br>
@@ -193,7 +194,6 @@
 						<a href="linus.html">LINUS BIKES</a>
 						<a href="legit-bud.html">LEGIT BUD STORE</a>
 						<a href="index.html#about">ABOUT</a>
-						<a href="contact.html">CONTACT</a>
                         <a href="artifacts.html">ARTIFACTS</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
