--- a/linus.html
+++ b/linus.html
@@ -17,7 +17,6 @@
             	<li><a href="index.html#about">ABOUT</a>
                	</li>
                 <li><a href="index.html#work">WORK</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
             </ul><
     </nav>		
     </div>
@@ -183,12 +182,14 @@
     				Let’s walk through how we combined all solutions given with this clickable prototype that I developed through InVision: 
     			</p>
     			<div>
-    				<iframe src="https://player.vimeo.com/video/306117065" width="640" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    				<iframe src="https://player.vimeo.com/video/307224537" width="640" height="472" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     			</div>
     		</div>
     		<div class="content takeaway">
     			<h3>TAKEAWAYS</h3>
     			<p>
+                    <strong><em>** To see more of the research and design process, please click on the ARTIFACTS link below **</em></strong>
+                    <br>
     				Although we were able to successfully portray the idea of using AR technology and gained incredible insight from testing and retesting the AR rendering, I would have liked to explore a way to prototype using actual AR software and have access to the users’ camera to display real room placement for their bikes. Overall I really enjoyed working with this client because I was able to learn a new technology that I had very little experience with. I am now completely intrigued with using this technology with more products in the future.
             
     				<br>
@@ -202,7 +203,6 @@
 						<a href="linus.html">LINUS BIKES</a>
 						<a href="legit-bud.html">LEGIT BUD STORE</a>
 						<a href="index.html#about">ABOUT</a>
-						<a href="contact.html">CONTACT</a>
                         <a href="artifacts.html">ARTIFACTS</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
