--- a/legit-bud.html
+++ b/legit-bud.html
@@ -30,9 +30,9 @@
     			</p>
     			</div>
     			<div class="icons">
-    				<figure class="icon-1"><img src="images/profile-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption><br>UX/UI Designer</figcaption></figure>
-    				<figure><img src="images/sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption>3 Week Sprint</figcaption></figure>
-    				<figure><img src="images/desktop-icon@3x.png" alt="Desktop Icon" class="responsive"><figure>Web Platform</figure></figure>
+    				<figure class="icon-1"><img src="images/group-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption>UX/UI Designer</figcaption></figure>
+    				<figure><img src="images/shoe-sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption>3 Week Sprint</figcaption></figure>
+    				<figure><img class="icon-3" src="images/desktop-icon@3x.png" alt="Desktop Icon" class="responsive"><figcaption>Web Platform</figcaption></figure>
     			</div>
     		</div>
     		<div class="content challenge">
@@ -178,6 +178,7 @@
     			</div>
     		</div>
     		<div class="content takeaway">
+                <div class="takeaway">
     			<h3>TAKEAWAYS</h3>
     			<p>
                     <strong><em>** To see more of the research and design process, please click on the ARTIFACTS link below **</em></strong>
@@ -187,6 +188,7 @@
     				<br>
     				<em>Thank You For Reading!!</em>
     			</p>
+            </div>
     		</div>
 				<div class="navbar" id="myNavbar">
 						<a href="index.html">HOME</a>
