--- a/linus.html
+++ b/linus.html
@@ -30,9 +30,9 @@
     			</p>
     			</div>
     			<div class="icons">
-    				<figure class="icon-1"><img src="images/shoe-sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption><br>2 Week Sprint</figcaption></figure>
-                    <figure><img src="images/group-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption><br>UX Researcher<br>UI Designer<br>Project Manager</figcaption></figure>
-    				<figure><img src="images/ios-app-icon@3x.png" alt="iPhone Icon" class="responsive"><figure>iOS Native App</figure></figure>
+    				<figure class="icon-1"><img src="images/shoe-sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption>2 Week Sprint</figcaption></figure>
+                    <figure><img src="images/group-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption>UX Researcher<br>UI Designer<br>Project Manager</figcaption></figure>
+    				<figure><img src="images/ios-app-icon@3x.png" alt="iPhone Icon" class="responsive"><figcaption>iOS Native App</figcaption></figure>
     			</div>
     		</div>
     		<div class="content challenge">
@@ -186,6 +186,7 @@
     			</div>
     		</div>
     		<div class="content takeaway">
+                <div class="takeaway">
     			<h3>TAKEAWAYS</h3>
     			<p>
                     <strong><em>** To see more of the research and design process, please click on the ARTIFACTS link below **</em></strong>
@@ -196,6 +197,7 @@
     				<br>
     				<em>Thank You For Reading!!</em>
     			</p>
+            </div>
     		</div>
 				<div class="navbar" id="myNavbar">
 						<a href="index.html">HOME</a>
