--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
         </div>
 
         <section class="section section-dark">
-            <h2>Adding to the Collection</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            <p>
+                <em>“Socrates said, “Know thyself.” I say, “Know thy users.” And guess what? They don’t think like you do.”</em> -Joshua Brewer
+            </p>
         </section>
 
         <div class="pimg4">
