Removed Css File
took away large image files that were no longer necessary

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <body>
     	<div class="pimg5">
                 <nav class="contact-nav">
-                    <img src="images/taty-red-sig@3x.png" alt="Logo" width="200" height="80">
+                    <a href="index.html"><img src="images/taty-red-sig@3x.png" width="200" height="80"></a>
                     <ul>
                         <li><a href="index.html">HOME</a>
                         </li>
